# fixtureless_fixturing_place_and_pick_re-grasping

./: .gitignore  Move Group Python Interface - ROS Documentationhttp:\\docs.ros.org › api › moveit_tutorials › html › doc.desktop  README.md  Untitled.ipynb  instruction_to_create_poincloud_and_ppf.txt  no motion plan found · Issue #1302 · ros-planning\moveithttps:\\github.com › ros-planning › moveit › issues.desktop
coppeliasim_msgs_srvs/: CMakeLists.txt  README.md  package.xml
coppeliasim_msgs_srvs/srv/: simRosLoadModule.srv  simRosUnloadModule.srv
coppeliasim_ros_control/: CMakeLists.txt  README.md  package.xml
coppeliasim_ros_control/include/: MyRobot_simHW.h  simExtRosControl_server.h
coppeliasim_ros_control/launch/: coppeliasim_ros_control.launch
coppeliasim_ros_control/src/ControlLoop/: MyRobot_simHW.cpp  simExtRosControl_plugin.cpp  simExtRosControl_server.cpp  simLib.cpp
coppeliasim_ros_services/: CMakeLists.txt  README.md  package.xml
coppeliasim_ros_services/include/simExtRosService/: simExtRosServer.h  simExtRosService_plugin.h  simExtRosSubscriber.h
coppeliasim_ros_services/src/: simExtRosServer.cpp  simExtRosService_plugin.cpp  simExtRosSubscriber.cpp
coppeliasim_run/: CMakeLists.txt  README.md  package.xml
coppeliasim_run/src/: start_coppeliasim.cpp
objects_description/: CMakeLists.txt  package.xml
objects_description/20985/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  tree_hier.html  tree_hier_after_merging.html
objects_description/20985/parts_render/: 28.txt  35.txt
objects_description/20985/parts_render_after_merging/: 18.txt
objects_description/20985/point_sample/: label-10000.txt  ply-10000.ply  pts-10000.pts  pts-10000.txt  sample-points-all-label-10000.txt  sample-points-all-pts-label-10000.ply  sample-points-all-pts-nor-rgba-10000.ply  sample-points-all-pts-nor-rgba-10000.txt
objects_description/20985/textured_objs/: new-1.mtl
objects_description/3822/: mobility.urdf
objects_description/8867/: mobility.urdf
objects_description/book/: book.mtl  book.urdf
objects_description/bottle/: bottle.urdf  mobility.urdf  small_bottle.mtl  small_bottle.stl
objects_description/can/: can.mtl  can.stl  can.urdf
objects_description/chair/: mobility.urdf
objects_description/clock/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  semantics.txt  tree_hier.html  tree_hier_after_merging.html
objects_description/clock/parts_render/: 0.txt  1.txt  2.txt  4.txt  5.txt  6.txt
objects_description/clock/parts_render_after_merging/: 0.txt  1.txt  2.txt  4.txt
objects_description/clock/point_sample/: label-10000.txt  ply-10000.ply  pts-10000.pts  pts-10000.txt  sample-points-all-label-10000.txt  sample-points-all-pts-label-10000.ply  sample-points-all-pts-nor-rgba-10000.ply  sample-points-all-pts-nor-rgba-10000.txt
objects_description/display/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  semantics.txt
objects_description/display/point_sample/: label-10000.txt  ply-10000.ply  pts-10000.pts  pts-10000.txt  sample-points-all-label-10000.txt  sample-points-all-pts-label-10000.ply  sample-points-all-pts-nor-rgba-10000.ply  sample-points-all-pts-nor-rgba-10000.txt
objects_description/display/textured_objs/: new-3.mtl
objects_description/keyboard/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  semantics.txt  tree_hier.html  tree_hier_after_merging.html
objects_description/keyboard/parts_render/: 1.txt  2.txt
objects_description/keyboard/point_sample/: label-10000.txt  ply-10000.ply  pts-10000.pts  pts-10000.txt  sample-points-all-label-10000.txt  sample-points-all-pts-label-10000.ply  sample-points-all-pts-nor-rgba-10000.ply  sample-points-all-pts-nor-rgba-10000.txt
objects_description/keyboard/textured_objs/: original-6.mtl  original-80.mtl
objects_description/lamp/: mobility.urdf
objects_description/mouse/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_original.json  semantics.txt
objects_description/mouse/textured_objs/: original-1.mtl  original-10.mtl  original-6.mtl
objects_description/potted_meat_can/: potted_meat_can.urdf  textured.mtl
objects_description/printer/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_original.json  semantics.txt
objects_description/printer/textured_objs/: original-24.mtl  (+1 more)
objects_description/simplebottle/: bottle.stl  bottle.urdf
objects_description/storage1/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  tree_hier.html  tree_hier_after_merging.html
objects_description/storage2/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  semantics.txt  tree_hier.html  tree_hier_after_merging.html
objects_description/sugar_box_simp/: sugar_box_simp.urdf
objects_description/switch/: meta.json  mobility.urdf  mobility_v2.json  result.json  result_original.json  semantics.txt
objects_description/table/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  tree_hier.html  tree_hier_after_merging.html
objects_description/table1/: mobility.urdf
objects_description/trashcan/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  semantics.txt  tree_hier.html  tree_hier_after_merging.html
objects_description/window/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_original.json
perception/: CMakeLists.txt  almonds_can_config.yaml  book_config.yaml  box_config.yaml  config_autodataset.yaml  cup_config.yaml  package.xml  readme
perception/include/: Hand.h  MarkerHelper.h  ParticleFilter.h  PoseEstimator.h  Utils.h
perception/launch/: test.launch
perception/src/: Hand.cpp  PoseEstimator.cpp  Utils.cpp
perception/srv/: SearchObject.srv
(+243 files in other folders)
