<package>
  <name>coppeliasim_msgs_srvs </name>
  <description>coppeliasim messages and services</description>
  <maintainer email="mahmud.a.aly@gmail.com">Mahmoud</maintainer>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>4.0.0</version>
  <author email="marc@coppeliarobotics.com">Marc</author>
  <license>GPLv3</license>
  <url>https://github.com/mahmoud-a-ali/coppeliasim_msgs_srvs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


