<package>
  <name>coppeliasim_ros_services</name>
  <description>coppeliasim_ros_services plugin</description>
  <maintainer email="mahmud.a.aly@gmail.com">Mahmoud</maintainer>
  <version>4.0.0</version>
  <author>Mahmoud</author>
  <license>GPLv3</license>
  <url>https://github.com/tud-cor/coppeliasim_ros_services</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>coppeliasim_msgs_srvs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv2</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>opencv2</run_depend>

</package>
