<?xml version="2.0"?>
<package>
  <name>coppeliasim_run</name>
  <version>0.0.0</version>
  <description>
	Starts coppeliasim Simulator using a system() call, so coppeliasim can be run directly from a roslaunch file.
	Based on webots_run from kaist_webots package. 
  </description>

  <maintainer email="mmattamala@ing.uchile.cl">Matias Mattamala</maintainer>
  <author>David Butterworth</author>

  <!-- License -->
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


</package>
